# django-reactive

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  TODO.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
django_reactive/: __init__.py  apps.py  fields.py  forms.py  schema_validator.py
django_reactive/forms/: fields.py  widgets.py
django_reactive/static/css/: django_reactive.css
django_reactive/static/js/: django_reactive.js
django_reactive/templates/: django_reactive.html
django_reactive/widget/: __init__.py  fields.py  widgets.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: README.md  requirements.txt
example/example/: settings.py  urls.py
example/static/css/: extra.css
example/static/js/: extra.js
example/templates/: detail.html  form.html
example/templates/django_react_json_schema_form/: base.html
example/tester/: __init__.py  admin.py  apps.py  forms.py  models.py  schemas.py  views.py
example/tester/fixtures/: admin.json
example/tester/migrations/: 0001_initial.py
example/todos/: admin.py  constants.py  models.py
example/todos/migrations/: 0001_initial.py
htmlcov/: django_reactive___init___py.html  django_reactive_fields_py.html  django_reactive_forms___init___py.html  django_reactive_forms_fields_py.html  django_reactive_forms_widgets_py.html  index.html  status.json
tests/: conftest.py  settings.py  test_fields.py  test_models.py  test_schema_validator.py  urls.py
tests/testapp/: apps.py  models.py  settings.py
