[tool.poetry]
name = "django-reactive"
version = "0.0.8"
description = "Django JSON form field on steroids using react-json-schema-form"
authors = ["Artem Kolesnikov <tyomo4ka@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/tyomo4ka/django-reactive"
repository = "https://github.com/tyomo4ka/django-reactive"
documentation = "https://github.com/tyomo4ka/django-reactive"
keywords = ["django",
            "postgres",
            "json",
            "jsonschema",
            "react"]


[tool.poetry.dependencies]
python = ">=3.7,<4"
jsonschema = "^3.0"
psycopg2-binary = "^2.7"
django = "^2.2||^3.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-django = "^4.1.0"


[tool.poetry.dev-dependencies]
bump2version = "^1.0"
coverage = "^5.3"
mock = "^4.0"
flake8 = "^3.8"
tox = "^3.20"
codecov = "^2.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
