[tool.poetry]
name = "django-reactive"
version = "0.0.11"
description = "Django JSON form field on steroids using react-json-schema-form"
authors = ["Artem Kolesnikov <tyomo4ka@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/tyomo4ka/django-reactive"
repository = "https://github.com/tyomo4ka/django-reactive"
documentation = "https://github.com/tyomo4ka/django-reactive"
keywords = ["django",
            "postgres",
            "json",
            "jsonschema",
            "react"]


[tool.poetry.dependencies]
python = ">=3.7,<4"
jsonschema = "^3.0||^4.0"
psycopg2-binary = "^2.7"
django = "^2.2||^3.0||^4.0"


[tool.poetry.dev-dependencies]
bump2version = "^1.0"
mock = "^4.0"
flake8 = "^3.8"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-django = "^4.5"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
