[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
  migrations/*.py
)
'''

[tool.poetry]
name = "django-reactive"
version = "0.0.12"
description = "Django JSON form field on steroids"
authors = ["Artem Kolesnikov <tyomo4ka@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/tyomo4ka/django-reactive"
repository = "https://github.com/tyomo4ka/django-reactive"
documentation = "https://github.com/tyomo4ka/django-reactive"
keywords = ["django",
            "postgres",
            "json",
            "jsonschema",
            "react"]


[tool.poetry.dependencies]
python = ">=3.8.1,<4"
jsonschema = "^3.0||^4.0"
psycopg2-binary = "^2.7||^3.0"
django = "^3.2||^4.0"


[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
mock = "^5.0"
flake8 = "^5.0"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-django = "^4.5"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
